# Proxy-Crawler-System

./: .env  .env.example  .gitignore  API_CONFIGURATION.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEV_ENVIRONMENT.md  DOCKER_DEV_README.md  Dockerfile  Dockerfile.simple  MCP_ACTUAL_TEST_RESULTS.md  MCP_INSTALLATION_REPORT.md  PROJECT_CLEANUP_SUMMARY.md  PR_DESCRIPTION.md  Proxies_管理測試頁面設計報告書.md  QUICK_START.md  README.md  SIMPLIFICATION_PROPOSAL.md  URL2Parquet_測試報告.md  alembic.ini  check_latest.py  check_proxy_websites.py  check_results.py  database_config.py  demo_data_pipeline.py  docker-compose.dev.yml  docker-compose.simple.yml  docker-compose.yml  env.example  frontend_test.html  geolocation_cache.db  job_categories.json  main.py  package-lock.json  package.json  performance_optimization.py  proxies_page_design_specification.md  proxy_list.json  proxy_validation_results.json  (+45 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Developer Daily Report/: 2025-09-10-daily-report.md
Docs/: ARCHITECTURE_EN.md  ChatGPT_MVP建議整合分析.md  ChatGPT代理探測器建議分析與整合方案.md  Daily_Report_2025-09-10.md  Docker 環境資料庫 URL 命名規則.md  ETL_Pipeline_Overview.md  Frontend_Build_Guide.md  HTML to Markdown 轉換技術整合方案.md  HTML_to_Markdown_部署與使用指南.md  Improvement_Plan.md  Issue_5_Implementation_Plan.md  LLMFeeder_通用轉換程式實現指南.md  Monitoring_and_Frontend_Config.md  PH2_網頁配置及功能細項說明_v0.1.0(草稿).md  PRD需求與設計方案對應關係檢查.md  PROJECT_OVERVIEW.md  Phase3_Observations_and_Status_Report.md  Proxies_管理測試頁面使用指南.md  Proxy IP 驗證模組  建構範例說明書.md  Proxy 爬蟲專案所需的依賴包.md  Proxy 爬蟲系統 ETL 流程說明.md  ProxyScraper_Integration_Analysis.md  ProxyScraper整合分析與建議.md  Proxy_IP_驗證模組實現狀況分析報告.md  Proxy_IP_驗證模組比較報告書_2025-09-08.md  Python 軟體包封裝大法.md  TECH_DEBT_TODO.md  UI_Specification.md  URL2Parquet_工作細部計畫.md  URL_2_parquet_ETL_設計細節說明書.mdx  URL_轉_Parquet_工具封裝細部計畫書.md  UrlToParquetWizard_小工作清單進度.md  UrlToParquetWizard_狀況分析報告.md  improved-naming-convention.md  naming-convention-comparison.md  proxies頁面改善計畫.md  proxy-admin-vscode-wireframe.mdx  三個GitHub代理專案分析與整合建議.md  代理伺服器(Proxy)爬蟲系統專案PRD.md  代理管理系統前端建置指南.md  (+19 more)
config/: __init__.py  api_config_template.yaml  config.yaml  optimized_config.json  proxy_manager.yaml  proxy_manager_example.yaml  server_config.yaml  settings.py
docker/prometheus/: prometheus.yml  (+1 more)
examples/: advanced_proxy_integration_demo.py  html_to_markdown_example.py  performance_optimization.py  playwright_theme_check.py
frontend/: .eslintrc.cjs  .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
migrations/: env.py
reports/: daily_report_2025-09-10.md
src/: __init__.py  main.py  seek_markdown_parser.py  simple_api.py  simple_main.py  start_servers.py
test_input_csv_exel files/: Free Proxy List 1.xls  Free Proxy List 1.xlsx  UTF-8onlyip11.csv  onlyip.xls  onlyip11.xls  onlyip22.xls
test_input_md_files/: Free_Proxy_List_-_HTTP_Proxies.md  Free_Proxy_List_-_Just_Checked_Proxy_List.md  US_Proxy_List_-_Free_Proxy_List.md  🤖_Free_Proxy_List_[1000+_IPs_Online].md
test_output/: proxies_20250907_063808.json  proxies_20250907_095803.json
tests/: test_advanced_integration.py  test_core_functionality.py  test_enhanced_integration.py  test_fetch_lock.py  test_html_to_markdown.py  test_integration.py  test_mcp_servers.py  test_metrics_endpoint.py  test_proxies_router.py  test_proxy_api_basic.py  test_proxy_crawler.py  test_route_integrity.py  test_seek_integration.py  test_seek_markdown_parser.py  test_stats_router.py  test_system_integration.py
tools/: execute_full_push.ps1  final_cleanup.ps1  import_grafana_dashboard.ps1  import_grafana_dashboard.sh  install_node_windows.ps1  prestart.sh
(+313 files in other folders)
